// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders customer list component when request errors 1`] = `
.c2 {
  color: #212322;
  font-size: 1.5em;
}

.c0 {
  background: #ffffff;
  margin-bottom: 2.5rem;
}

.c1 {
  color: #212322;
  font-size: 2em;
  font-weight: bold;
}

.c3 {
  color: red;
  font-size: 1.2em;
}

<section
  class="c0"
>
  <h1
    class="c1"
  >
    ADMIN Users
  </h1>
  <p
    class="c2 c3"
  >
    We were unable to complete your request at this time. Please try again or contact support.
  </p>
</section>
`;

exports[`renders customer list component when request loading 1`] = `
.c2 {
  color: #212322;
  font-size: 1.5em;
}

.c0 {
  background: #ffffff;
  margin-bottom: 2.5rem;
}

.c1 {
  color: #212322;
  font-size: 2em;
  font-weight: bold;
}

.c3 {
  color: #adadac;
  font-size: 1.2em;
}

<section
  class="c0"
>
  <h1
    class="c1"
  >
    ADMIN Users
  </h1>
  <p
    class="c2 c3"
  >
    Loading users...
  </p>
</section>
`;

exports[`renders customer list when request successful 1`] = `
.c4 {
  color: #212322;
  font-size: 1.5em;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #e8f2fb;
  border-radius: 0.5rem;
  margin: 0 1.5rem 0 0;
  width: 3.5rem;
  height: 3.5rem;
}

.c5 {
  color: #005cc8;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  text-align: center;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
}

.c8 {
  color: #787775;
  font-size: 1.2em;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: "row";
  -ms-flex-direction: "row";
  flex-direction: "row";
  margin-bottom: 1.5rem;
}

.c2:last-child {
  margin-bottom: 0;
}

.c0 {
  background: #ffffff;
  margin-bottom: 2.5rem;
}

.c1 {
  color: #212322;
  font-size: 2em;
  font-weight: bold;
}

<section
  class="c0"
>
  <h1
    class="c1"
  >
    ADMIN Users
  </h1>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <p
        class="c4 c5"
      >
        J
      </p>
    </div>
    <div
      class="c6"
    >
      <p
        class="c4 c7"
      >
        Jonathan Warykowski
      </p>
      <p
        class="c4 c8"
      >
        Admin
      </p>
    </div>
  </div>
</section>
`;
